typescript/checker/tests/conformance/controlFlow/controlFlowIteration.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/controlFlow/controlFlowIteration.ts:3:5
  |
3 | let cond: boolean;
  |     ^^^^

